mongo db aws path

--- a/backend/docker-compose.env
+++ b/backend/docker-compose.env
@@ -7,4 +7,4 @@ TRANSPORTER=nats://nats:4222
 
 CACHER=Memory
 
-MONGO_URI=mongodb://mongo/backend
+MONGO_URI=MONGO_URI=mongodb://ec2-52-207-48-64.compute-1.amazonaws.com:27017/assignment3_db
